# dum-enxin

./: .gitignore  CMakeLists.txt  README.md  index.html
src/: game.c  game.h  main.c
